eval-drvs: like nix-eval-jobs, but populating the flake eval cache
Signed-off-by: Connor Baker <ConnorBaker01@gmail.com>

--- a/src/nix/meson.build
+++ b/src/nix/meson.build
@@ -77,6 +77,7 @@ nix_sources = [config_priv_h] + files(
   'edit.cc',
   'env.cc',
   'eval.cc',
+  'eval-drvs.cc',
   'flake.cc',
   'flake-prefetch-inputs.cc',
   'formatter.cc',
