wip: terrible performance, don't use
Latest output from Claude:

  I've successfully implemented batch allocation for the GHC RTS integration! Here's what was accomplished:

  Changes Made

  1. NixAlloc.hs - Added nixGhcAllocMany function that allocates N objects in one FFI call
  2. ghc-gc.cc - Added function pointer type, loading, and working allocMany() implementation
  3. allocator.hh - Enabled batch allocation flag for GHC

  Performance Results

  Test: Single gnome iteration (/tmp/test-gnome-one.nix)

  | Implementation        | Time  | vs Boehm    |
  |-----------------------|-------|-------------|
  | System Nix (Boehm GC) | 3.2s  | baseline    |
  | GHC RTS (before)      | >30s  | >10x slower |
  | GHC RTS (with batch)  | 27.4s | 9x slower   |

  Key Metrics

  - Batch allocations: 155,898 calls (was ~20M individual calls)
  - Reduction: ~128x fewer FFI calls
  - Individual allocations: 0 (all use batch path now)

  Analysis

  While batch allocation is working correctly, we're still 9x slower than Boehm. The remaining bottlenecks are:

  1. Still significant FFI overhead: 156k batch calls vs Boehm's direct pointer arithmetic
  2. Per-object overhead in Haskell: Each of ~20M objects still gets individually malloc'd, zeroed, and rooted
  3. Memory retention: The allocatedPointers list keeps everything alive forever (prevents GC)

  Next Steps (from plan)

  To get closer to Boehm performance, we'd need to:

  1. Eliminate per-object zeroing - Zero in larger blocks or lazily
  2. Fix root management - Remove the growing list that prevents all GC
  3. Sample statistics - Don't track every single allocation
  4. Thread-local caches - Keep pre-allocated batches per thread like Boehm does

  The batch allocation infrastructure is now in place and working - this is a solid foundation for further optimizations!

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ flake-regressions
 
 # direnv
 .direnv/
+
+# Iteration 64: GHC RTS integration - Haskell build artifacts
+src/libexpr/ghc-alloc/build/
+src/libexpr/ghc-alloc/dist/
+src/libexpr/ghc-alloc/*.hi
+src/libexpr/ghc-alloc/*.o
